<resources>
    <string name="app_name">SmartFinan</string>
    <string name="amount">Importe</string>
    <string name="description">Descripción</string>
    <string name="category">Categoría</string>
    <string name="subcategory">Subcategoría</string>
    <string name="date">Fecha</string>
    <string name="home">Inicio</string>
    <string name="spend">Gastos</string>
    <string name="profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_regularity">Seleccione Regularidad</string>
    <string name="select_category">Seleccione Categoría</string>
    <string name="spendDetail">Detalle del gasto</string>
    <string name="spend_amount">Importe del gasto</string>
    <string name="spend_category">Categoría del gasto</string>
    <string name="spend_subcategory">Subcategoria del gasto</string>
    <string name="spend_date">Fecha del gasto</string>
    <string name="edit_spend">Editar Gasto</string>
    <string name="delete_spend">Eliminar Gasto</string>
    <string name="monthly_income">Ingreso mensual:</string>
    <string name="yearly_income">Ingreso anual:</string>
    <string name="pay_day">Día de cobro:</string>
    <string name="income">Ingresos</string>
    <string name="graphic">Gráfica</string>
</resources>