<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SpendDetailFragment"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tvTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spendDetail"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Detail"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/tvTextDescription"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spend_amount"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="amount"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/tvTextAmount"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvTextCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spend_category"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="category"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/tvTextCategory"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvTextSubcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spend_subcategory"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvSubcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="subcategory"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/tvTextSubcategory"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spend_date"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/tvSubcategory"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="date"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/tvTextDate"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_spend"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_spend"
        android:backgroundTint="@color/colorError"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>