<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MonthSpendActivity">

    <LinearLayout
        android:id="@+id/header_month_spend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/purple_200"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tvMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="JULIO"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            android:textSize="24sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="8dp">
            <TextView
                android:id="@+id/tvMonthIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Este mes has ingresado: 1300€"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/colorTextSecondary"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/tvMonthSpend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Este mes has gastado: 1300€"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="6dp"
                android:textColor="@color/colorTextSecondary"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/spend_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/header_month_spend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amount"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:gravity="center"
            />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMonthSpend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spend_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>