<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/common_padding_default">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salario Indra"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_income"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_amount"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"/>
        />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000€"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toEndOf="@+id/tv_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_regular"/>

        <TextView
            android:id="@+id/tv_yearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearly_income"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_yearly_amount"
            app:layout_constraintTop_toBottomOf="@+id/tv_regular"/>
        />

        <TextView
            android:id="@+id/tv_yearly_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12000€"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toEndOf="@+id/tv_yearly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_yearly"/>

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_day"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_day_amount"
            app:layout_constraintTop_toBottomOf="@+id/tv_yearly"/>
        />

        <TextView
            android:id="@+id/tv_day_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="29"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toEndOf="@+id/tv_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_day"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>